fixing some layout issues on the front page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,7 +11,6 @@ $black: #000000;
 #searchbar {
   width: 80%;
   height: 5%;
-  padding-bottom: 10%;
 }
 
 #error_explanation {
